--- a/playbooks/roles/setup_common/tasks/upgrade.yaml
+++ b/playbooks/roles/setup_common/tasks/upgrade.yaml
@@ -3,6 +3,8 @@
   when: ansible_facts.distribution in ('Debian', 'Ubuntu')
   block:
     - name: Apt upgrade
+      retries: 3
+      delay: 60
       ansible.builtin.apt:
         upgrade: full
 
