--- a/playbooks/roles/info_tor/tasks/onionoo.yaml
+++ b/playbooks/roles/info_tor/tasks/onionoo.yaml
@@ -1,5 +1,6 @@
 ---
 - name: Query Onionoo
+  throttle: 10
   ansible.builtin.uri:
     url: "https://onionoo.torproject.org/details?search={{ _fingerprint_hashed }}"
     return_content: true
