--- a/playbooks/roles/setup_tor/tasks/config.yaml
+++ b/playbooks/roles/setup_tor/tasks/config.yaml
@@ -28,3 +28,11 @@
   ansible.builtin.template:
     src: logrotate.tor.j2
     dest: /etc/logrotate.d/tor
+
+- name: Cron job to restart service if needed
+  vars:
+    _service: tor
+  ansible.builtin.cron:
+    name: restart {{ _service }} if systemd refused to do it
+    job: >-
+      systemctl is-failed {{ _service }} && systemctl start {{ _service }}
