have os being a spearate item within hostnames

--- a/playbooks/roles/snapshot/tasks/snapshot.yaml
+++ b/playbooks/roles/snapshot/tasks/snapshot.yaml
@@ -4,7 +4,7 @@
   throttle: "{{ concurrent_local_jobs }}"
   changed_when: true
   vars:
-    _description: "{{ inventory_hostname | regex_replace('^hi', '') }}"
+    _description: "{{ inventory_hostname | regex_replace('^hi-', '') }}"
   ansible.builtin.command:
     cmd: >-
       hcloud --quiet --poll-interval 30s server create-image --type snapshot --description='{{ _description }}'
