--- a/examples/systems-hcloud.yaml
+++ b/examples/systems-hcloud.yaml
@@ -60,13 +60,13 @@ h_common:
       ltsrc: linux-6.12.y
       stable: linux-rolling-stable
       lts: linux-rolling-lts
-    # hostname examples:  hs0d-arm-master-bp-cl-89  or  hiu-amd-stable
+    # hostname examples:  hs0-d-arm-main-bp-cl-89  or  hi-u-amd-stable
     _parts: "{{ inventory_hostname.split('-') }}"
-    kernel_git_repo_url: "{{ _repo_urls[_parts[2] | default('')] | default('') }}"
-    kernel_git_version: "{{ _versions[_parts[2] | default('')] | default('') }}"
-    kernel_debian_backports: "{{ _parts[3] | default('') != 'nobp' }}"
-    kernel_debian_cloud: "{{ _parts[4] | default('') != 'nocl' }}"
-    kernel_build_from_source: "{{ _parts[2] | default('') in _versions | list }}"
+    kernel_git_repo_url: "{{ _repo_urls[_parts[3] | default('')] | default('') }}"
+    kernel_git_version: "{{ _versions[_parts[3] | default('')] | default('') }}"
+    kernel_debian_backports: "{{ _parts[4] | default('') != 'nobp' }}"
+    kernel_debian_cloud: "{{ _parts[5] | default('') != 'nocl' }}"
+    kernel_build_from_source: "{{ _parts[3] | default('') in _versions | list }}"
   children:
     hi:
     hn:
