--- a/playbooks/roles/info_base/tasks/trace.yaml
+++ b/playbooks/roles/info_base/tasks/trace.yaml
@@ -1,17 +1,17 @@
 ---
-- name: Get issue from system log
+- name: Get trace from system log
   changed_when: _result.stdout
   failed_when: false
   ansible.builtin.shell:
     cmd: |-
-      journalctl --since "{{ issue_since }}" --quiet |
+      journalctl --since "{{ trace_since }}" --quiet |
         grep -F -B 1 -e ' kernel: -----------[ cut here ]------------' |
         head -n 1
   register: _result
 
-- name: Results of issue
+- name: Results of trace
   when: _result.stdout
   vars:
-    _issue: "{{ (item | split(' '))[5:] | join(' ') }}"
-  ansible.builtin.include_tasks: _issue.yaml
+    _trace_start: "{{ (item | split(' '))[5:] | join(' ') }}"
+  ansible.builtin.include_tasks: _trace.yaml
   loop: "{{ _result.stdout_lines }}"
