--- a/playbooks/roles/setup_tor/tasks/lyrebird.yaml
+++ b/playbooks/roles/setup_tor/tasks/lyrebird.yaml
@@ -6,7 +6,7 @@
     _git_patches: "{{ lyrebird_git_patches }}"
     _remove_git_repo: "{{ lyrebird_remove_git_repo }}"
     _repo_dir: /root/lyrebird
-  ansible.builtin.include_tasks: "{{ playbook_dir }}/roles/setup_common/tasks/_git.yaml"
+  ansible.builtin.include_tasks: "{{ playbook_dir }}/roles/lib/_git.yaml"
 
 - name: Build Lyrebird
   throttle: 10
