--- a/playbooks/roles/info_base/tasks/targets.yaml
+++ b/playbooks/roles/info_base/tasks/targets.yaml
@@ -5,7 +5,7 @@
   ansible.builtin.lineinfile:
     path: "{{ tmp_dir }}/node-targets.yaml"
     line: "{{ targets_line }}"
-    regex: "{{ targets_regex }}"
+    regexp: "{{ targets_regex }}"
     state: "{{ (node_metrics is defined and node_metrics) | ternary('present', 'absent') }}"
 
 - name: Snowflake targets
@@ -14,7 +14,7 @@
   ansible.builtin.lineinfile:
     path: "{{ tmp_dir }}/snowflake-targets.yaml"
     line: "{{ targets_line }}"
-    regex: "{{ targets_regex }}"
+    regexp: "{{ targets_regex }}"
     state: "{{ (snowflake_metrics is defined and snowflake_metrics) | ternary('present', 'absent') }}"
 
 - name: Tor targets
@@ -25,7 +25,7 @@
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/tor_bridge-targets.yaml"
         line: "{{ targets_line }}"
-        regex: "{{ targets_regex }}"
+        regexp: "{{ targets_regex }}"
         state:
           "{{ (tor_metrics is defined and tor_metrics and (bridge_distribution is defined and bridge_distribution)) |
           ternary('present', 'absent') }}"
@@ -36,7 +36,7 @@
       ansible.builtin.lineinfile:
         path: "{{ tmp_dir }}/tor_server-targets.yaml"
         line: "{{ targets_line }}"
-        regex: "{{ targets_regex }}"
+        regexp: "{{ targets_regex }}"
         state:
           "{{ (tor_metrics is defined and tor_metrics and (bridge_distribution is undefined or not bridge_distribution)) |
           ternary('present', 'absent') }}"
@@ -48,5 +48,5 @@
   ansible.builtin.lineinfile:
     path: "{{ tmp_dir }}/tor_ddos-targets.yaml"
     line: "{{ targets_line }}"
-    regex: "{{ targets_regex }}"
+    regexp: "{{ targets_regex }}"
     state: "{{ (ddos_metrics is defined and ddos_metrics) | ternary('present', 'absent') }}"
