--- a/playbooks/roles/info_snowflake/tasks/systemd-time.yaml
+++ b/playbooks/roles/info_snowflake/tasks/systemd-time.yaml
@@ -13,4 +13,5 @@
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} Start {{ _starttime }} Change {{ _changetime }}"
     path: "{{ tmp_dir }}/snowflake_systemd_time"
-    regex: "^{{ inventory_hostname }} "
+    regexp: "^{{ inventory_hostname }} "
+    state: "{{ _service.status | ternary('present', 'absent') }}"
