updated node exporter args

--- a/playbooks/roles/setup_common/tasks/node-exporter.yaml
+++ b/playbooks/roles/setup_common/tasks/node-exporter.yaml
@@ -17,7 +17,7 @@
     create: false
     line: >-
       ARGS='
-      --collector.filesystem.mount-points-exclude="^/(dev|proc|run/credentials/.+|sys|var/lib/docker/.+|var/lib/containers/storage/.+)($|/)"
+      --collector.filesystem.mount-points-exclude="^/(dev|proc|run/credentials/.+)($|/)"
       --collector.processes
       --collector.systemd
       --collector.tcpstat
