--- a/playbooks/roles/info_base/tasks/targets.yaml
+++ b/playbooks/roles/info_base/tasks/targets.yaml
@@ -1,52 +1,51 @@
 ---
-- name: Node targets
-  delegate_to: localhost
-  throttle: 1
-  ansible.builtin.lineinfile:
-    path: "{{ tmp_dir }}/node-targets.yaml"
-    line: "{{ targets_line }}"
-    regexp: "{{ targets_regex }}"
-    state: "{{ (node_metrics is defined and node_metrics) | ternary('present', 'absent') }}"
-
-- name: Snowflake targets
-  delegate_to: localhost
-  throttle: 1
-  ansible.builtin.lineinfile:
-    path: "{{ tmp_dir }}/snowflake-targets.yaml"
-    line: "{{ targets_line }}"
-    regexp: "{{ targets_regex }}"
-    state: "{{ (snowflake_metrics is defined and snowflake_metrics) | ternary('present', 'absent') }}"
-
-- name: Tor targets
+- name: Targets
+  module_defaults:
+    ansible.builtin.lineinfile:
+      create: true
+      firstmatch: true
+      mode: "0644"
+      line: '- targets: ["{{ inventory_hostname }}:{{ metrics_port }}"]'
+      regexp: '^- targets: \["{{ inventory_hostname }}:'
   block:
-    - name: Tor bridge targets
+    - name: Node targets
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
-        path: "{{ tmp_dir }}/tor_bridge-targets.yaml"
-        line: "{{ targets_line }}"
-        regexp: "{{ targets_regex }}"
-        state:
-          "{{ (tor_metrics is defined and tor_metrics and (bridge_distribution is defined and bridge_distribution)) |
-          ternary('present', 'absent') }}"
+        path: "{{ tmp_dir }}/node-targets.yaml"
+        state: "{{ (node_metrics is defined and node_metrics) | ternary('present', 'absent') }}"
 
-    - name: Tor server targets
+    - name: Snowflake targets
       delegate_to: localhost
       throttle: 1
       ansible.builtin.lineinfile:
-        path: "{{ tmp_dir }}/tor_server-targets.yaml"
-        line: "{{ targets_line }}"
-        regexp: "{{ targets_regex }}"
-        state:
-          "{{ (tor_metrics is defined and tor_metrics and (bridge_distribution is undefined or not bridge_distribution)) |
-          ternary('present', 'absent') }}"
+        path: "{{ tmp_dir }}/snowflake-targets.yaml"
+        state: "{{ (snowflake_metrics is defined and snowflake_metrics) | ternary('present', 'absent') }}"
 
-- name: DDoS targets
-  delegate_to: localhost
-  throttle: 1
-  when: ddos_metrics is defined
-  ansible.builtin.lineinfile:
-    path: "{{ tmp_dir }}/tor_ddos-targets.yaml"
-    line: "{{ targets_line }}"
-    regexp: "{{ targets_regex }}"
-    state: "{{ (ddos_metrics is defined and ddos_metrics) | ternary('present', 'absent') }}"
+    - name: Tor targets
+      block:
+        - name: Tor bridge targets
+          delegate_to: localhost
+          throttle: 1
+          ansible.builtin.lineinfile:
+            path: "{{ tmp_dir }}/tor_bridge-targets.yaml"
+            state:
+              "{{ (tor_metrics is defined and tor_metrics and (bridge_distribution is defined and bridge_distribution)) |
+              ternary('present', 'absent') }}"
+
+        - name: Tor server targets
+          delegate_to: localhost
+          throttle: 1
+          ansible.builtin.lineinfile:
+            path: "{{ tmp_dir }}/tor_server-targets.yaml"
+            state:
+              "{{ (tor_metrics is defined and tor_metrics and (bridge_distribution is undefined or not bridge_distribution)) |
+              ternary('present', 'absent') }}"
+
+    - name: DDoS targets
+      delegate_to: localhost
+      throttle: 1
+      when: ddos_metrics is defined
+      ansible.builtin.lineinfile:
+        path: "{{ tmp_dir }}/tor_ddos-targets.yaml"
+        state: "{{ (ddos_metrics is defined and ddos_metrics) | ternary('present', 'absent') }}"
