--- a/playbooks/roles/info_base/tasks/artefact.yaml
+++ b/playbooks/roles/info_base/tasks/artefact.yaml
@@ -1,13 +1,14 @@
 ---
 - name: Look for artefact
+  when: artefact_paths
   ansible.builtin.find:
-    follow: true
-    get_checksum: true
-    hidden: true
     paths: "{{ artefact_paths }}"
     patterns: "{{ artefact_patterns }}"
     recurse: true
+    hidden: true
+    follow: true
     size: "{{ artefact_size }}"
+    get_checksum: true
   register: _found
 
 - name: Work on found artefact
