--- a/playbooks/roles/info_base/defaults/main.yaml
+++ b/playbooks/roles/info_base/defaults/main.yaml
@@ -7,5 +7,7 @@ artefact_patterns:
 artefact_script: ""
 artefact_size: "200k"
 
+issue_since: 1 day ago
+
 trace_fname_prefix: common
 trace_since: 1 day ago
